--- a/bash/config
+++ b/bash/config
@@ -2,4 +2,4 @@ function git_branch {
   ref=$(git symbolic-ref HEAD 2> /dev/null) || return;
   echo "("${ref#refs/heads/}") ";
 }
-PS1="[\[\033[1;32m\]\w\[\033[0m] \$(git_branch)$ "
+PS1="[\[\033[1;32m\]\w\[\033[0m] \033[1;36m\]\$(git_branch)\[\033[0m$ "
