--- a/bash/config
+++ b/bash/config
@@ -2,4 +2,7 @@ function git_branch {
   ref=$(git symbolic-ref HEAD 2> /dev/null) || return;
   echo "("${ref#refs/heads/}") ";
 }
-PS1="[\[\033[1;32m\]\w\[\033[0m] \033[1;36m\]\$(git_branch)\[\033[0m$ "
+
+PS1="[\[\e[1;32m\]\w\[\e[0m\]] \[\e[0m\]\[\e[1;36m\]\$(git_branch)\[\e[0m\]$ "
+# rvm 
+[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
