--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,59 @@
+# set -g prefix C-a
+set -sg escape-time 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# mouse
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+# color
+set -g default-terminal "screen-256color"
+# statusbar color
+set -g status-fg white
+set -g status-bg black
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-utf8 on
+set -g status-interval 60
+set -g status-justify centre
+setw -g monitor-activity on
+set -g visual-activity on
+# window color
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+# panel color
+set -g pane-border-fg green
+set -g pane-border-bg black
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind s split-window -v
 bind v split-window -h
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
+bind -r < resize-pane -L 1
+bind -r > resize-pane -R 1
+bind -r - resize-pane -D 1
+bind -r + resize-pane -U 1
 bind : command-prompt
+
+# cycle windows
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
