some tmux conf & zsh git alias

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,15 @@
 # set -g prefix C-a
+bind C-b send-prefix
 set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
+setw -g mode-keys vi
+
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+
+# on Mac,copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
 
 # mouse
 setw -g mode-mouse on
@@ -21,6 +29,7 @@ set -g status-utf8 on
 set -g status-interval 60
 set -g status-justify centre
 setw -g monitor-activity on
+#setw -g automatic-rename off
 set -g visual-activity on
 # window color
 setw -g window-status-fg cyan
@@ -42,8 +51,11 @@ set -g message-attr bright
 
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind s split-window -v
-bind v split-window -h
+#bind s split-window -v
+#bind v split-window -h
+# on MacOs ,open new panes in the same directory
+bind v send-keys " ~/.tmux/tmux-panes -h" C-m
+bind s send-keys " ~/.tmux/tmux-panes -v" C-m
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
