--- a/tmux.conf
+++ b/tmux.conf
@@ -5,12 +5,6 @@ set -g base-index 1
 setw -g pane-base-index 1
 setw -g mode-keys vi
 
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-
-# on Mac,copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
-
 # mouse
 setw -g mode-mouse on
 set -g mouse-select-pane on
@@ -48,14 +42,10 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-
-
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #bind s split-window -v
 #bind v split-window -h
-# on MacOs ,open new panes in the same directory
-bind v send-keys " ~/.tmux/tmux-panes -h" C-m
-bind s send-keys " ~/.tmux/tmux-panes -v" C-m
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -69,3 +59,13 @@ bind : command-prompt
 # cycle windows
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
+
+# on Mac
+# open new panes in the same directory
+bind v send-keys " ~/.tmux/tmux-panes -h" C-m
+bind s send-keys " ~/.tmux/tmux-panes -v" C-m
+# copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
