--- a/tmux.conf
+++ b/tmux.conf
@@ -66,6 +66,6 @@ bind -r C-l select-window -t :+
 bind v send-keys " ~/.tmux/tmux-panes -h" C-m
 bind s send-keys " ~/.tmux/tmux-panes -v" C-m
 # copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-#set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-#bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-#bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
