--- a/tmux.conf
+++ b/tmux.conf
@@ -43,8 +43,8 @@ set -g message-bg black
 set -g message-attr bright
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-#bind s split-window -v
-#bind v split-window -h
+bind s split-window -v
+bind v split-window -h
 
 bind h select-pane -L
 bind j select-pane -D
@@ -62,9 +62,6 @@ bind -r C-l select-window -t :+
 
 
 # on Mac
-# open new panes in the same directory
-bind v send-keys " ~/.tmux/tmux-panes -h" C-m
-bind s send-keys " ~/.tmux/tmux-panes -v" C-m
 # copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
