--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=green]#S #[fg=yellow]#I:#[fg=cyan]#P"
 set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-utf8 on
 set -g status-interval 60
