--- a/tmux.conf
+++ b/tmux.conf
@@ -63,6 +63,6 @@ bind -r C-l select-window -t :+
 
 # on Mac
 # copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
+#set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+#bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+#bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
