--- a/rcfiles/tmux.conf
+++ b/rcfiles/tmux.conf
@@ -1,46 +1,23 @@
-# set -g prefix C-a
-bind C-b send-prefix
-set -sg escape-time 1
+# https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
+set -g escape-time 10
 set -g base-index 1
-setw -g pane-base-index 1
+#setw -g pane-base-index 1
+
+# enable mouse click, scroll
+#set -g mouse on
+
+# for copy-mode, navigate like using vim
 setw -g mode-keys vi
 
-# mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# %F=%Y-%m-%d, %R=%H:%M
+set -g status-right "%F %R"
 
-# color
-set -g default-terminal "screen-256color"
-# statusbar color
-set -g status-fg white
-set -g status-bg black
-set -g status-left-length 40
-set -g status-left "#[fg=green]#S #[fg=yellow]#I:#[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
-set -g status-utf8 on
-set -g status-interval 60
+# Set the position of the window list
 set -g status-justify centre
-setw -g monitor-activity on
-#setw -g automatic-rename off
-set -g visual-activity on
-# window color
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-# panel color
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
 
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+# #S=session_name #I=window_index  #P=pane_index
+set -g status-left "#S #I:#P"
+
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind s split-window -v
@@ -54,15 +31,3 @@ bind -r < resize-pane -L 1
 bind -r > resize-pane -R 1
 bind -r - resize-pane -D 1
 bind -r + resize-pane -U 1
-bind : command-prompt
-
-# cycle windows
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-
-# on Mac
-# copy & paste;  https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste);tmux paste-buffer"
