alacritty & fish abbr
Signed-off-by: niedhui <niedhui@gmail.com>

--- a/rcfiles/tmux.conf
+++ b/rcfiles/tmux.conf
@@ -3,8 +3,13 @@ set -g escape-time 10
 set -g base-index 1
 #setw -g pane-base-index 1
 
+# unbind the prefix and bind it to Ctrl-a like screen
+#unbind C-b
+#set -g prefix C-a
+#bind C-a send-prefix
+
 # enable mouse click, scroll
-#set -g mouse on
+set -g mouse on
 
 # for copy-mode, navigate like using vim
 setw -g mode-keys vi
