--- a/configs/alacritty/alacritty_gpd.yml
+++ b/configs/alacritty/alacritty_gpd.yml
@@ -109,7 +109,7 @@ alt_send_esc: true
 key_bindings:
   - { key: Paste,                   action: Paste                        }
   - { key: Copy,                    action: Copy                         }
-  - { key: N,        mods: Command, action: SpawnNewInstance             }
+  - { key: N,        mods: Control|Shift,   action: SpawnNewInstance             }
   - { key: L,        mods: Control, action: ClearLogNotice               }
   - { key: L,        mods: Control, chars: "\x0c"                        }
   - { key: Home,                    chars: "\x1bOH",   mode: AppCursor   }
