--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-vim/bundle
 fish_history
 fish_variables
-fishd.*
-rcfiles/config/direnv/allow/
-rcfiles/config/configstore/*
-rcfiles/config/kingsoft*
-Kingsoft
-Gemfile.lock
-fzf_key_bindings.fish
-fish_user_key_bindings.fish
-.netrwhist
-/rcfiles/config/Transmission Remote GUI
+configs/fish/local.fish
