--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -18,8 +18,8 @@ set -g status-justify centre
 set -g status-left "#S #I:#P"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
 bind h select-pane -L
 bind j select-pane -D
